--- a/src/components/RightPanel/.module.css
+++ b/src/components/RightPanel/.module.css
@@ -54,9 +54,24 @@
     flex-direction: column;
     gap: 0.7em;
     height: 100%;
-    overflow: scroll;
+    overflow: auto;
     overflow-x: hidden;
 }
+
+::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: #f2f2f2;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 20px;
+    border: 3px solid #f2f2f2;
+  }
+  
 
 .right-aside-pane .checkout-pane {
     background-color: var(--white);
