--- a/src/components/RightPanel/.module.css
+++ b/src/components/RightPanel/.module.css
@@ -53,7 +53,6 @@
     display: flex;
     flex-direction: column;
     gap: 0.7em;
-    height: 100%;
     overflow: auto;
     overflow-x: hidden;
 }
@@ -150,7 +149,7 @@
     padding-right: 0;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     font-size: 10px;
     gap: 10px;
